--- a/templates/test.html
+++ b/templates/test.html
@@ -72,7 +72,7 @@
             </li>
             <li>
               <div>
-                <input type="radio" id="a11" name="a1" value="1">
+                <input type="radio" id="a11" name="a1" value="1" required>
                 <label for="a11">Several days.
 
                 </label>
@@ -103,7 +103,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a20" name="a2" value="0">
+                <input type="radio" id="a20" name="a2" value="0" required>
                 <label for="a20">Not at all.</label>
               </div>
             </li>
@@ -138,7 +138,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a30" name="a3" value="0">
+                <input type="radio" id="a30" name="a3" value="0" required>
                 <label for="a30">Not at all.</label>
               </div>
             </li>
@@ -177,7 +177,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a40" name="a4" value="0">
+                <input type="radio" id="a40" name="a4" value="0" required>
                 <label for="a40">Rarely.</label>
               </div>
             </li>
@@ -212,7 +212,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a50" name="a5" value="0">
+                <input type="radio" id="a50" name="a5" value="0" required>
                 <label for="a50">Not at all.</label>
               </div>
             </li>
@@ -247,7 +247,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a60" name="a6" value="0">
+                <input type="radio" id="a60" name="a6" value="0" required>
                 <label for="a60">Not at all.</label>
               </div>
             </li>
@@ -282,7 +282,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a70" name="a7" value="0">
+                <input type="radio" id="a70" name="a7" value="0" required>
                 <label for="a70">Not at all.</label>
               </div>
             </li>
@@ -318,7 +318,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a80" name="a8" value="0">
+                <input type="radio" id="a80" name="a8" value="0" required>
                 <label for="a80">Not at all.</label>
               </div>
             </li>
@@ -352,7 +352,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a90" name="a9" value="0">
+                <input type="radio" id="a90" name="a9" value="0" required>
                 <label for="a90">Not at all.</label>
               </div>
             </li>
@@ -387,7 +387,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a100" name="a10" value="0">
+                <input type="radio" id="a100" name="a10" value="0" required>
                 <label for="a100">Normal.</label>
               </div>
             </li>
@@ -420,7 +420,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a110" name="a11" value="0">
+                <input type="radio" id="a110" name="a11" value="0" required>
                 <label for="a110">No changes.</label>
               </div>
             </li>
@@ -453,7 +453,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a120" name="a12" value="0">
+                <input type="radio" id="a120" name="a12" value="0" required>
                 <label for="a120">Not at all.</label>
               </div>
             </li>
@@ -486,7 +486,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a130" name="a13" value="0">
+                <input type="radio" id="a130" name="a13" value="0" required>
                 <label for="a130">Rarely or Never.</label>
               </div>
             </li>
@@ -519,7 +519,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a140" name="a14" value="0">
+                <input type="radio" id="a140" name="a14" value="0" required>
                 <label for="a100">Not at all.</label>
               </div>
             </li>
@@ -553,7 +553,7 @@
           <ul class="list-group">
             <li>
               <div>
-                <input type="radio" id="a150" name="a15" value="0">
+                <input type="radio" id="a150" name="a15" value="0" required>
                 <label for="a150">Not difficult at all.</label>
               </div>
             </li>
